tests/pass/variable_1.crdm
fn main() {
    let x: int;
    x = 1;
}