tests/fail/closure_2.crdm
fn main() {
    let increment: fn(&int) -> void = |x| int -> { x += 1; };

    increment(1);
}